fix logic of hiding expired packages + fix layout issue + fix skeleton style

--- a/src/pages/Packages/packages.css
+++ b/src/pages/Packages/packages.css
@@ -2,7 +2,7 @@
   background: var(--lightgrey);
   border: 1px solid var(--lightgrey3);
   border-radius: 0.5rem;
-  height: 36rem;
+  height: 31rem;
   width: 25rem;
   margin: 0.5rem;
   animation: skeleton 1s infinite alternate;
